--- a/demo.html
+++ b/demo.html
@@ -34,5 +34,73 @@
     <h1 class="display-3">Display-3</h1>
     <h1 class="display-4">Display-4</h1>
 
+
+    <h1>Heading 1 <small>secondary heading</small><h1>
+    <h2>Heading 1<small>secondary heading</small><h2>
+    <h3>Heading 3<small>secondary heading</small><h3>
+    <h4>Heading 4<small>secondary heading</small><h4>
+    <h5>Heading 5<small>secondary heading</small><h5>
+    <h6>Heading 6<small>secondary heading</small><h6>
+
+    <p><abbr title = "World Wide Web">WWW</abbr></p>
+    <p>Welcome to <mark>Coding</mark></p>
+
+    <blockquote class = "blockquote">
+    You can quote the block of content in the document by using .blockquote class
+ </blockquote>
+
+
+ <div class = "container">
+         <h2>Unstyled List</h2>
+         <ul class = "list-unstyled">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+         </ul>
+        <h2>Inline List</h2>
+         <ul class = "list-inline">
+            <li class="list-inline-item" >HTML</li>
+            <li class="list-inline-item">CSS</li>
+            <li class="list-inline-item">JavaScript</li>
+         </ul>         
+         <h2>Description list alignment</h2>
+         <dl class = "row">
+            <dt class = "col-sm-3">HTML</dt>
+            <dd class = "col-sm-9">To define the content of web pages</dd>
+            <dt class = "col-sm-3">CSS</dt>
+            <dd class = "col-sm-9">To specify the layout of web pages</dd>
+            <dt class = "col-sm-3">JavaScript</dt>
+            <dd class = "col-sm-9">To program the behavior of web pages</dd>
+         </dl>
+      </div>
+
+
+      <div class = "container-fluid">
+         <h2>Text Color</h2>
+         <p class = "text-primary">Text-primary Class</p>
+         <p class = "text-secondary">Text-secondary Class</p>
+         <p class = "text-success">Text-success Class</p>
+         <p class = "text-danger">Text-danger Class</p>
+         <p class = "text-warning">Text-warning Class</p>
+         <p class = "text-info">Text-info Class</p>
+         <p class = "text-dark">Text-dark Class</p>
+         <p class = "text-body">Text-body Class</p>
+         <p class = "text-muted">Text-muted Class</p>
+        <p class = "text-white">Text-white Class</p>
+        <p class = "text-light">Text-light Class</p>
+          </div>
+
+
+    <div class="container">
+<p class="bg-primary">Background color is primary.</p>
+  <p class="bg-success">Background color is success.</p>
+  <p class="bg-info">Background color is information.</p>
+  <p class="bg-warning">Background color is warning.</p>
+  <p class="bg-danger">Background color is danger.</p>
+  <p class="bg-secondary">Background color is secondary</p>
+ <p class="bg-dark  text-white">Background color is dark grey.</p>
+  <p class="bg-light">Background color is light grey.</p>
+</div>
+
 </body>
 </html>
