--- a/demo.html
+++ b/demo.html
@@ -102,5 +102,150 @@
   <p class="bg-light">Background color is light grey.</p>
 </div>
 
+
+<table class="table table-dark table-bordered table-hover">
+    <thead>
+      <tr>
+        <th>Employee Id</th>
+        <th>Employee Name</th>
+        <th>Employee mail</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>100</td>
+        <td>John</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>101</td>
+        <td>Alex</td>
+        <td>alex@example.com</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Teenu</td>
+        <td>teenu@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <table class="table responsive">
+    <thead>
+      <tr class = "table-active">
+        <th>Employee Id</th>
+        <th>Employee Name</th>
+        <th>Employee mail</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class = "table-success">
+        <td>100</td>
+        <td>John</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr class = "table-danger">
+        <td>101</td>
+        <td>Alex</td>
+        <td>alex@example.com</td>
+      </tr>
+      <tr class = "table-info">
+        <td>102</td>
+        <td>Teenu</td>
+        <td>teenu@example.com</td>
+      </tr>
+<tr class = "table-warning">
+        <td>103</td>
+        <td>Jyo</td>
+        <td>jyo@example.com</td>
+      </tr>
+<tr class = "table-primary">
+        <td>104</td>
+        <td>Harshi</td>
+        <td>harshi@example.com</td>
+      </tr>
+<tr class = "table-secondary">
+        <td>105</td>
+        <td>Riya</td>
+        <td>riya@example.com</td>
+      </tr>
+<tr class = "table-light">
+        <td>106</td>
+        <td>Rosy</td>
+        <td>rosy@example.com</td>
+      </tr>
+<tr class = "table-dark">
+        <td>107</td>
+        <td>Anvi</td>
+        <td>anvi@example.com</td>
+      </tr>
+<tr class = "table-active">
+        <td>108</td>
+        <td>Abhi</td>
+        <td>abhi@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <ul class = "breadcrumb">
+   <li class = "breadcrumb-item"><a href = "https://www.mashupstack.com">Home</a></li>
+   <li class = "breadcrumb-item"><a href="https://www.mashupstack.com/list-courses">Mashupstack</a></li>
+   <li class = "breadcrumb-item active" aria-current = "page">Bootstrap 4</li>
+</ul>
+
+
+<h1>Welcome to <span class = "badge  badge-pill badge-warning">Mashupstack</span></h1>
+<h2>Welcome to <span class = "badge badge-pill badge-primary">Mashupstack</span></h2>
+<h3>Welcome to <span class = "badge badge-pill badge-secondary">Mashupstack</span></h3>
+<h4>Welcome to <span class = "badge badge-pill badge-success">Mashupstack</span></h4>
+<h5>Welcome to <span class = "badge badge-pill badge-info">Mashupstack</span></h5>
+<h6>Welcome to <span class = "badge badge-pill badge-dark">Mashupstack</span></h6>
+
+<button type = "button" class = "btn btn-info">Inbox<span class = "badge badge-light">19</span>
+</button>
+
+
+<div class="progress">
+  <div class="progress-bar" style="width:50%"></div>
+</div>
+
+<button type = "button" class = "btn btn-info">Inbox<span class = "badge badge-light">19</span>
+</button>
+
+<div class = "progress" style = "height: 30px;">
+            <div class = "progress-bar bg-success
+            " style = "width: 35%;height:30px" >50%</div>
+</div>
+
+
+
+<div class="progress">
+  <div class="progress-bar bg-primary" style="width:30%">
+    Primary
+  </div>
+  <div class="progress-bar bg-warning" style="width:20%">
+    Warning
+  </div>
+  <div class="progress-bar bg-info" style="width:10%">
+    Info
+  </div>
+</div>
+
+<div class="spinner-border"></div>
+
+<ul class="pagination justify-content-center">
+<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+<li class="page-item"><a class="page-link" href="#">1</a></li>
+<li class="page-item"><a class="page-link" href="#">2</a></li>
+<li class="page-item"><a class="page-link" href="#">3</a></li>
+<li class="page-item"><a class="page-link" href="#">Next</a></li>
+</ul>
+<ul class="pagination justify-content-end">
+<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+<li class="page-item"><a class="page-link" href="#">1</a></li>
+<li class="page-item"><a class="page-link" href="#">2</a></li>
+<li class="page-item"><a class="page-link" href="#">3</a></li>
+<li class="page-item"><a class="page-link" href="#">Next</a></li>
+</ul>
 </body>
 </html>
