--- a/cw3.html
+++ b/cw3.html
@@ -18,7 +18,7 @@
 </ul>
   </div>
    <div class="button">
-   <button type = "button" class = "btn btn-outline-success  btn-info">Start New Course</button>
+   <button type = "button" class = "btn btn-outline-success ">Start New Course</button>
    </div>
 
     <h2>My Progress<span class = "badge badge-light">3Courses</span></h2>
@@ -28,7 +28,7 @@
   <div class="progress-bar progress-bar-striped progress-bar-animated progress-bar-success" style="width:70%">70%</div>
 </div><br>
 <div class="container">
-<ul class="pagination">
+<ul class="pagination justify-content-center">
     <li class="page-item"><a class="page-link" href="#">prev</a></li>
   <li class="page-item"><a class="page-link" href="#">1</a></li>
   <li class="page-item active"><a class="page-link" href="#">2</a></li>
