--- a/demo.html
+++ b/demo.html
@@ -247,5 +247,14 @@
 <li class="page-item"><a class="page-link" href="#">3</a></li>
 <li class="page-item"><a class="page-link" href="#">Next</a></li>
 </ul>
+
+<button data-toggle="collapse" data-target="#demo">Collapsible</button>
+  <div id="demo" class="collapse">
+     Some text in collapsible
+  </div>
+
+  <a href="#demo1" data-toggle="collapse">Collapsible</a>
+<div id="demo1" class="collapse">
+Some text in collapsible</div>
 </body>
 </html>
