--- a/cw4.html
+++ b/cw4.html
@@ -10,104 +10,67 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </head>
 <body>
+  
+      <h2 class="text-center">Frequently Asked Questions</h2>
+      <div class="container-fluid">
+      <button data-toggle="collapse"  data-target="#demo">What is your return policy?</button></div>
+  <div id="demo" class="collapse">
+     Our return policy allows you to return products within 30 days of purchase. Pleasuct is in its original condition and packaging.
+  </div>
+  <div class="container-fluid">
+  <button data-toggle="collapse"  data-target="#demo2">Do you offer international shipping?</button></div>
+  <div id="demo2" class="collapse">
+    yes, we offer international shipping to select countries. Shipping fees and delivery times may vary based on the destination.
+  </div>
+      <div class="container-fluid">
+   <button data-toggle="collapse"  data-target="#demo3">How can I contact customer support?</button></div>
+   <div id="demo3" class="collapse">
+      You can contact our customer support team via email at support@company.com or by calling our toll-free number at 1-800-123-4567. Our support hours are Monday to Friday, 9 AM to 5 PM.
+   </div>
    <div class="card-deck">
-  <div class="card">
-     <div class="card-header">product-1</div>
-     
-    <div class="card-body">
-      <img class="card-img-top" src="watch.jpg" alt="Card image" style="width:90%" height="350px">
-      <p class="card-text">A wristwatch is worn around the wrist, attached by a watch strap or another type of bracelet, including metal bands or leather straps. </p>
-       <a href="#" class="card-link">Read more</a>
-       <div class ="dropdown">
-        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Options</button>
-        <div class="dropdown-menu">
-       <a class="dropdown-item" href="#">Add to wishlist</a>
-       <a class="dropdown-item" href="#">Compare</a>
-       <a class="dropdown-item" href="#">Report</a>
+      <div class="card">
+        <div class="card-body text-center">
+          <h5 class="card-title">Mr.Samuel</h5>
+          <p class="card-text">Customer support representative</p>
+          <div class ="dropdown">
+          <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Quick Actions</button>
+          <div class="dropdown-menu">
+          <a class="dropdown-item" href="#">Call</a>
+          <a class="dropdown-item" href="#">Email</a>
+          <a class="dropdown-item" href="#">Message</a>
      </div>
-     
-
-
-
     </div>
-  </div>
-  <div class="card">
-    <div class="card-header">product-2</div>
-      <img class="card-img-top" src="watch.jpg" alt="Card image" style="width:100%">
-    <div class="card-body text-center">
-      <p class="card-text">Text in second card</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body text-center">
+          <h5 class="card-title">Mr.John</h5>
+          <p class="card-text">Customer Care</p>
+          <div class ="dropdown">
+       <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Quick Actions</button>
+       <div class="dropdown-menu">
+       <a class="dropdown-item" href="#">Call</a>
+       <a class="dropdown-item" href="#">Email</a>
+        <a class="dropdown-item" href="#">Message</a>
+     </div>
     </div>
-  </div>
-  <div class="card bg-danger">
-    <div class="card-body text-center">
-      <p class="card-text">Text in third card</p>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body text-center">
+          <h5 class="card-title">Mr.Catherine</h5>
+          <p class="card-text">Customer Service Manager</p>
+          <div class ="dropdown">
+       <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Quick Actions</button>
+       <div class="dropdown-menu">
+       <a class="dropdown-item" href="#">Call</a>
+       <a class="dropdown-item" href="#">Email</a>
+        <a class="dropdown-item" href="#">Message</a>
+     </div>
     </div>
-  </div>
-  <div id = "accordion">
-            <div class = "card">
-               <div class = "card-header">
-                  <a class = "card-link" data-toggle = "collapse" href = "#collapseOne">
-                     Accordion #1
-                  </a>
-               </div>
-               <div id = "collapseOne" class = "collapse show" data-parent = "#accordion">
-                  <div class = "card-body">Content for Accordion #1.</div>
-               </div>
-            </div>
-            <div class = "card">
-               <div class = "card-header">
-                  <a class = "collapsed card-link" data-toggle = "collapse" href = "#collapseTwo">
-                     Accordion #2
-                  </a>
-               </div>
-               <div id = "collapseTwo" class = "collapse" data-parent = "#accordion">
-                  <div class = "card-body">Content for Accordion #2.</div>
-               </div>
-            </div>
-            <div class = "card">
-               <div class = "card-header">
-                  <a class = "collapsed card-link" data-toggle = "collapse" href = "#collapseThree">
-                     Accordion #3
-                  </a>
-               </div>
-               <div id = "collapseThree" class = "collapse" data-parent = "#accordion">
-                  <div class = "card-body"> Content for Accordion #3.</div>
-               </div>
-            </div>
-         </div>
-</div>
+        </div>
+      </div>
+   </div>
 
-<div id = "accordion">
-            <div class = "card">
-               <div class = "card-header">
-                  <a class = "card-link" data-toggle = "collapse" href = "#collapseOne">
-                     Accordion #1
-                  </a>
-               </div>
-               <div id = "collapseOne" class = "collapse show" data-parent = "#accordion">
-                  <div class = "card-body">Content for Accordion #1.</div>
-               </div>
-            </div>
-            <div class = "card">
-               <div class = "card-header">
-                  <a class = "collapsed card-link" data-toggle = "collapse" href = "#collapseTwo">
-                     Accordion #2
-                  </a>
-               </div>
-               <div id = "collapseTwo" class = "collapse" data-parent = "#accordion">
-                  <div class = "card-body">Content for Accordion #2.</div>
-               </div>
-            </div>
-            <div class = "card">
-               <div class = "card-header">
-                  <a class = "collapsed card-link" data-toggle = "collapse" href = "#collapseThree">
-                     Accordion #3
-                  </a>
-               </div>
-               <div id = "collapseThree" class = "collapse" data-parent = "#accordion">
-                  <div class = "card-body"> Content for Accordion #3.</div>
-               </div>
-            </div>
-         </div>
 </body>
 </html>
