--- a/demo.html
+++ b/demo.html
@@ -256,5 +256,55 @@
   <a href="#demo1" data-toggle="collapse">Collapsible</a>
 <div id="demo1" class="collapse">
 Some text in collapsible</div>
+
+<ul class="nav justify-content-center">
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link1</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link2</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li>
+</ul>
+
+<ul class="nav flex-column justify-content-end">
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link1</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link2</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li>
+</ul>
+
+<ul class="nav nav-pills">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+<li class="nav-item">
+    <a class="nav-link disabled" href="#">Disabled</a>
+  </li>
+</ul>
+
+<nav class="navbar navbar-expand-sm bg-light">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Details</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Contact</a>
+    </li>
+  </ul>
+</nav>
 </body>
 </html>
