--- a/hw6.html
+++ b/hw6.html
@@ -14,6 +14,7 @@
   <div class="text-center">
     <h3>Sweet Treats Bakery - Customer Feedback Form</h3>
   </div>
+  <div class="container mt-4 mx-auto d-block">
     <div class="form-group">
       <label for="name">Name:</label>
       <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
@@ -54,5 +55,6 @@
 </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
 </body>
 </html>
