--- a/cw6.html
+++ b/cw6.html
@@ -13,6 +13,7 @@
    <div class="text-center">
     <h3>Customer Feedback Form</h3>
   </div>
+  <div class="container mt-4 mx-auto d-block">
     <div class="form-group">
       <label for="name">Name:</label>
       <input type="text" class="form-control" id="name" placeholder="Enter name" name="name">
@@ -62,6 +63,7 @@
   </label>
 </div>
 </div>
-<button type="submit" class="btn btn-primary">Submit</button>
+<button type="submit" class="btn btn-primary mx-auto d-block">Submit</button>
+</div>
 </body>
 </html>
