--- a/demo.html
+++ b/demo.html
@@ -364,5 +364,16 @@ Some text in collapsible</div>
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
+
+<div class="card">
+  <div class="card bg-primary">
+    <div class="card">
+    <div class="card-body">
+      <div class="card-body">Basic card</div>
+  </div>
+    </div>
+  </div>
+</div>
+</div>
 </body>
 </html>
