--- a/extrawork.html
+++ b/extrawork.html
@@ -9,34 +9,52 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
+      <a class="nav-link disabled" href="#">Project name</a>
+    </li>
+     <li class="nav-item">
       <a class="nav-link" href="#">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Details</a>
+      <a class="nav-link disabled" href="#">About</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link disabled" href="#">Contact</a>
     </li>
   </ul>
+  <ul class="nav justify-content-end">
+  <li class="nav-item">
+    <a class="nav-link" href="#">Logged in as username</a>
+  </li>
+  </ul>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvasLg" aria-controls="navbarOffcanvasLg" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarOffcanvasLg" aria-labelledby="navbarOffcanvasLgLabel">
+    ...
+  </div>
+</nav>
 </nav>
 <div class="container-fluid">
     <div class="row">
     <div class="col-sm-2 col-md-8 col-lg-2">
         <ul class="nav flex-column bg-light">
+            
             <li class="nav-item">
-                <a class="nav-link" href="#">Offers</a>
+                <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Packages</a>
+                <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Packages</a>
+                <a class="nav-link" href="#">Link</a>
             </li>
             </ul>
     </div>
